--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Darcy StJean</h1>
-<p>Email: darcyStJean7@gmail.com</p>
-<h1>Course Info</h1>
-<p>MODE 4201
-<br>Professor: Mohammad Shamas 
-</p>
-</body>
+	<body>
+		<h1>Darcy StJean</h1>
+		<p>3rd year Computer Programmer Analyst student
+		<br>Email: darcyStJean7@gmail.com</p>
+		<h1>Course Info</h1>
+		<p>MODE 4201
+		<br>Professor: Mohammad Shamas 
+		</p>
+	</body>
 </html>
