--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<h1>Darcy StJean</h1>
-		<p>3rd year Computer Programmer Analyst student
-		<br>Email: darcyStJean7@gmail.com</p>
-		<h1>Course Info</h1>
-		<p>MODE 4201
-		<br>Professor: Mohammad Shamas 
-		</p>
-	</body>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+.w3-sidebar a {font-family: "Roboto", sans-serif}
+body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
+</style>
+<body>
+	<h1>Darcy StJean</h1>
+	<p>3rd year Computer Programmer Analyst student
+	<br>Email: darcyStJean7@gmail.com</p>
+	<h1>Course Info</h1>
+	<p>MODE 4201
+	<br>Professor: Mohammad Shamas 
+	</p>
+</body>
 </html>
