--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
     <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
   </div>
   <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
-    <a href="index.html" class="w3-bar-item w3-button">Classwork</a>
+    <a href="index.html" class="w3-bar-item w3-button">Welcome</a>
+	<a href="classwork.html" class="w3-bar-item w3-button">Classwork</a>
   </div>
 </nav>
 </body>
