--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 </style>
 <body>
-<!-- Sidebar/menu -->
+<!--Sidebar-->
 <nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
     <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
@@ -21,5 +21,14 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 	<a href="classwork.html" class="w3-bar-item w3-button">Classwork</a>
   </div>
 </nav>
+<!--Page content-->
+<div class="w3-main" style="margin-left:250px">
+	<h1>Darcy StJean</h1>
+	<p>3rd year Computer Programmer Analyst student
+	<h1>Course Info</h1>
+	<p>MODE 4201
+	<br>Professor: Mohammad Shamas 
+	</p>
+</div>
 </body>
 </html>
