Updated index and added pages

--- a/labs.html
+++ b/labs.html
@@ -25,13 +25,9 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 </nav>
 <!--Page content-->
 <div class="w3-main" style="margin-left:250px">
-	<h1>Darcy St Jean</h1>
-	<p>3rd year Computer Programmer Analyst student
-	<h1>Course Info</h1>
-	<p>MODE 4201
-	<br>Mobile Development
-	<br>Professor: Mohammad Shamas 
-	</p>
+	<ul>
+		<li><a href="lab2.html">Lab 2 - Mobile Application Development Tool</a></li>
+	</ul>
 </div>
 </body>
 </html>
