--- a/lab2.html
+++ b/lab2.html
@@ -26,6 +26,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 <!--Page content-->
 <div class="w3-main" style="margin-left:250px">
 	<p>
+		stuff
 	</p>
 </div>
 </body>
