--- a/lab2.html
+++ b/lab2.html
@@ -26,7 +26,14 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 <!--Page content-->
 <div class="w3-main" style="margin-left:250px">
 	<ul>
-		stuff
+		<li>Software name: Android Studio 4.0.1</li>
+		<li>Platform: Android</li>
+		<li>Development type: Native app</li>
+		<li>Advantages: Open source, free, large community, Java to Kotlin translator,
+		<br> built in emulator, customizable</li>
+		<li>Disadvantages: Long boot up time, high pc specs required, initial build takes long,
+		<br>updating takes long</li>
+		<li>Link: <a href="https://developer.android.com/">https://developer.android.com/</a></li>
 	</ul>
 </div>
 </body>
