--- a/lab2.html
+++ b/lab2.html
@@ -28,12 +28,34 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 	<ul>
 		<li>Software name: Android Studio 4.0.1</li>
 		<li>Platform: Android</li>
-		<li>Development type: Native app</li>
+		<li>Development type: Native app
+		<br>Advantages: Works offline, better device compatability, fast
+		<br>Disadvantages: Must be downloaded, expensive, require more maintenance</li>
+		<li>Link: <a href="https://developer.android.com/">https://developer.android.com/</a></li>
+		<li>Developers: Google and JetBrains</li>
+		<li>Release date: December 2014</li>
+		<li>License: Freeware</li>
+		<li>Price: Free</li>
+		<li>Languages: Kotlin, Java, C++</li>
+		<li>Features: Templates, sample apps, APK analyzer, cloud integration, GitHub integration</li>
+		<li>Debugger: Yes</li>
+		<li>Built-in Emulator: Yes</li>
+		<li>Requirements: Windows 7/8/10 (64-bit), Mac OS X 10.0 to 10.14, Linux GNOME or KDE, Chrome OS, 
+		<br>4GB RAM minimum, 8GB RAM reccomended,
+		<br>2GB disk space minimum, 4GB disk space reccomended, 
+		<br>1280 x 800 screen resolution minimum</li>
+		<li>IDE: IDE is included</li>
+		<li>Software requirements: Android Gradle Plugin, Google Maven dependencies</li>
 		<li>Advantages: Open source, free, large community, Java to Kotlin translator,
-		<br> built in emulator, customizable</li>
+		<br>built in emulator, customizable</li>
 		<li>Disadvantages: Long boot up time, high pc specs required, initial build takes long,
 		<br>updating takes long</li>
-		<li>Link: <a href="https://developer.android.com/">https://developer.android.com/</a></li>
+		<li>Language availability: Global language support</li>
+		<li>Uploading and selling apps: Apps can be uploaded and sold for free.
+		<br>Steps: Prepare promotional materials, configure options and upload assets. publish app</li>
+		<li>Third-party emulation: The emulator Genymotion is compatable with Android Studio </li>
+		<li>Market share: 1.96%</li>
+		<li>Command line tools: Yes</li>
 	</ul>
 </div>
 </body>
