--- a/lab2.html
+++ b/lab2.html
@@ -25,6 +25,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 </nav>
 <!--Page content-->
 <div class="w3-main" style="margin-left:250px">
+	<h2>Darcy St Jean MODE 4201 Lab 2</h2>
 	<ul>
 		<li>Software name: Android Studio 4.0.1</li>
 		<li>Platform: Android</li>
